--- a/templates/attachments/form.html
+++ b/templates/attachments/form.html
@@ -2,7 +2,7 @@
 {% load filters static %}
 
 {% block content %}
-	<form action="{% url 'attachment_new' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
+	<form action="{% url 'attachments:new' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
 		<input type="hidden" name="content_type" value="{{content_type}}" />
 		<input type="hidden" name="object_id" value="{{object_id}}" />
 		<input type="hidden" name="next" value='{{ next|default:"{% url 'home' %}" }}' />
