--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -15,7 +15,7 @@
   </a>
 </div>
 <div class="btn_wrapper">
-  <a href="{% url 'attachment_new' %}?object_id={{product.id}}&content_type={{product_type}}&next={% url 'product_item' product.id %}" class="btn_big">
+  <a href="{% url 'attachments:new' %}?object_id={{product.id}}&content_type={{product_type}}&next={% url 'product_item' product.id %}" class="btn_big">
     <img src="{% static 'img/icons/attach.png' %}" />Ajouter une pièce jointe
   </a>
 </div>
